<resources>
    <string name="aurora_group_title">Group</string>
    <string name="aurora_starred_contacts_header">Starred contacts</string>
    <string name="aurora_menu_import">Import contacts</string>
    <string name="aurora_menu_export">Export contacts</string>
    <string name="aurora_searchview_hint">Search contacts</string>
    <string name="aurora_group_no_group">Ungrouped</string>
    <string name="aurora_group_family">Family</string>
    <string name="aurora_group_friend">Friend</string>
    <string name="aurora_group_classmate">Classmate</string>
    <string name="aurora_group_colleague">Colleague</string>
    <string name="aurora_group_attribution">Location</string>
    <string name="aurora_group_company">Company</string>
    <string name="aurora_group_recently_added">Recently added</string>
    <string name="aurora_left_kuohao">(</string>
    <string name="aurora_right_kuohao">)</string>
    <string name="aurora_edit_group_name_title">Name</string>
    <string name="aurora_edit_group_name_hint">Enter the name</string>
    <string name="aurora_edit_group_ring_title">Ringtone</string>
    <string name="aurora_edit_group_ring_hint">Default</string>
    <string name="aurora_group_detail_send_mms">Bulk SMS</string>
    <string name="aurora_group_detail_add_member">Add member</string>
    <string name="aurora_add_star">Starred</string>
    <string name="aurora_remove_star">Unstarred</string>
    <string name="aurora_address_hint">Address</string>
    <string name="telType_Moblie">Mobile</string>
    <string name="telType_Home">Home</string>
    <string name="telType_Work">Office</string>
    <string name="telType_Fax">Office Fax</string>
    <string name="telType_Main">Telephone</string>
    <string name="telType_FaxHome">Home Fax</string>
    <string name="telType_Pager">Pager</string>
    <string name="telType_custom">Custom</string>
    <string name="othertype">Other</string>
    <string name="imType_Aim">AIM</string>
    <string name="imType_Yahoo">Yahoo</string>
    <string name="imType_Skype">Skype</string>
    <string name="imType_Qq">QQ</string>
    <string name="imType_GooleTalk">Google Talk</string>
    <string name="imType_Icq">ICQ</string>
    <string name="imType_Jabber">Jabber</string>
    <string name="imType_Msn">MSN</string>
    <string name="relation_assitant">Assistant</string>
    <string name="relation_brother">Brothers</string>
    <string name="relation_child">Children</string>
    <string name="relation_dom_partner">Roommate</string>
    <string name="relation_father">Father</string>
    <string name="relation_mother">Mother</string>
    <string name="relation_friend">Friends</string>
    <string name="relation_manager">Manager</string>
    <string name="relation_parent">Parents</string>
    <string name="relation_partner">Partners</string>
    <string name="relation_referred">Referrals</string>
    <string name="relation_relative">Relatives</string>
    <string name="relation_sistert">Sisters</string>
    <string name="relation_spouse">Spouse</string>
    <string name="emailType_Work">Work</string>
    <string name="emailType_Private">Home</string>
    <string name="addressType_Company">Work</string>
    <string name="addressType_Home">Home</string>
    <string name="add_fields_more">Add more information</string>
    <string name="aurora_phone_hint_text">Enter the number</string>
    <string name="aurora_email_hint_text">Enter the email address</string>
    <string name="aurora_address_hint_text">Enter the address</string>
    <string name="aurora_company_hint_text">Enter the company name</string>
    <string name="aurora_position_hint_text">Enter the title</string>
    <string name="aurora_note_hint_text">Enter remarks</string>
    <string name="aurora_group_create">Add Group</string>
    <string name="aurora_menu_edit">Edit</string>
    <string name="aurora_menu_delete">Delete</string>
    <string name="aurora_menu_share_contact">Send this business card</string>
    <string name="aurora_recentCallsLabel">Recents</string>
    <string name="aurora_unknow_source_calllog">From Mars</string>
    <string name="aurora_menu_delete_calllog">Delete call records</string>
    <string name="aurora_menu_add_exist_contact">Add to existing contact</string>
    <string name="aurora_import_export">Import/Export</string>
    <string name="aurora_import_title">Import</string>
    <string name="aurora_export_title">Export</string>
    <string name="aurora_menu_sim_contacts">Contacts on SIM card</string>
    <string name="aurora_menu_sim1_contacts">Contacts on SIM card 1</string>
    <string name="aurora_menu_sim2_contacts">Contacts on SIM card 2</string>
    <string name="aurora_loading_sim_contacts_title">Reading contacts on SIM card</string>
    <string name="aurora_empty_contact_text">No Contact</string>
    <string name="aurora_sd_not_ready">Internal Storage Unavailable!</string>
    <string name="aurora_sd_is_full">Internal storage is full!</string>
    <string name="aurora_sim_not_ready_tip">No SIM card was detected</string>
    <string name="aurora_import_sim_title">Import from SIM card</string>
    <string name="aurora_import_sd_title">Import from internal storage</string>
    <string name="aurora_import_sd_subtitle">Import vCard files from internal device</string>
    <string name="aurora_export_sim_title">Export to SIM card</string>
    <string name="aurora_export_sd_title">Export to internal storage</string>
    <string name="aurora_export_sd_subtitle">Export contacts to vCard</string>
    <string name="aurora_export_contact_to_sim">Exporting contacts to SIM card</string>
    <string name="aurora_import_confirm_message">%s found, import?</string>
    <string name="aurora_delete_group_dialog_message">Delete group %1$s？</string>
    <string name="aurora_delete_group_toast">Group ‘%1$s’ deleted</string>
    <string name="aurora_remove_group_member_message" formatted="false">Remove ‘%s’ from ‘%s’？</string>
    <string name="aurora_remove_group_member_message_multi" formatted="false">Remove ‘%s’ contact(s) from ‘%s’？</string>
    <string name="aurora_remove_group_one_toast">" ‘%1$s’ has been deleted"</string>
    <string name="aurora_remove_star_message">Unstar ‘%1$s’？</string>
    <string name="aurora_remove_star_title">Unstar</string>
    <string name="aurora_removeing">Removing...</string>
    <string name="aurora_remove_group_member_toast" formatted="false">"%s contact(s) removed from group ‘%s’ "</string>
    <string name="aurora_add_group_member_toast" formatted="false">%s contact(s) added to group %s</string>
    <string name="aurora_sim_no_contact_message">No contact entry on SIM card</string>
    <string name="aurora_find_sim_contacts_message">Found %1$s contact(s) on the SIM card, import?</string>
    <string name="aurora_sim_contact_import_start_toast">Contacts on the SIM card contacts will be imported later</string>
    <string name="aurora_sim_contact_import_end_toast">Contacts imported successfully</string>
    <string name="aurora_delete_one_contact_message">Delete ‘%1$s’？</string>
    <string name="aurora_delete_one_contact_toast">" ‘%1$s’ deleted"</string>
    <string name="aurora_remove_starred_toast">Unstarred</string>
    <string name="aurora_rename_group_toast">"A group with the same name already exists.  Please give a new name for the group"</string>
    <string name="aurora_add_group_more_toast">Up to 100. Reduce selected contacts</string>
    <string name="aurora_save_group_dialog_title">Saving</string>
    <string name="aurora_import_sd2_title">Import from SD card</string>
    <string name="aurora_import_sd2_subtitle">Import vCard files from SD card</string>
    <string name="aurora_export_sd2_title">Export to SD Card</string>
    <string name="aurora_export_sd2_subtitle">Export contacts to vCard files on the SD card</string>
    <string name="gn_dialpad_new_contact_item">New contact</string>
    <string name="gn_dialpad_add_exist_contact_item">Existing contact</string>
    <string name="gn_dialpad_send_message_item">Send message</string>
    <string name="gn_allcall_tab_label">All calls</string>
    <string name="gn_misscall_tab_label">Missed calls</string>
    <string name="gn_exchange_contacts">Gionee Cloud</string>
    <string name="gn_menu_merge_contacts">Merge Contacts</string>
    <string name="gn_menu_ringtone_set_batch">Set Ringtone In Batch</string>
    <string name="gn_add_to_favorite">Add to favorites</string>
    <string name="gn_remove_from_favorite">Remove from favorites</string>
    <string name="gn_menu_gemini_sim_management">Dual SIM Setting</string>
    <string name="gn_menu_clear_frequent_contacted">Clear Frequently Called</string>
    <string name="gn_outgoingcall_tab_label">Outgoing calls</string>
    <string name="gn_incomingcall_tab_label">Received calls</string>
    <string name="gn_add_blacklist">Add to BlackList</string>
    <string name="gn_show_intercept_call">Show intercept call</string>
    <string name="gn_menu_delete_contact">Delete Contacts</string>
    <string name="gn_menu_dialpad_title">Go DialPad</string>
    <string name="delete_call_log">Delete call log</string>
    <string name="gn_sales_num">number:</string>
    <string name="gn_sales_time">time(min):</string>
    <string name="gn_sales_switch">switch</string>
    <string name="gn_sales_save">save</string>
    <string name="gn_sales_exit">exit</string>
    <string name="gn_menu_batch_delete">Batch Delete</string>
    <string name="gn_menu_share_contacts">Share contacts</string>
    <string name="gn_menu_contacts_filter">Fliter contacts</string>
    <string name="gn_menu_fliter_calllog">Switch call log</string>
    <string name="gn_photo_style_options">Photo style options</string>
    <string name="gn_listitem_onclick_options">Click listitem</string>
    <string name="gn_listitem_onclick_options_default_value">1</string>
    <string name="gn_menu_batch_options">Batch Options</string>
    <string name="gn_contact_photo_default_add">Add</string>
    <string name="gn_contact_photo_default_photo">Photo</string>
    <string name="gn_contact_photo_edit_str">Edit</string>
    <string name="gn_one_hand_operation_on">One-handed operation on</string>
    <string name="gn_one_hand_operation_off">One-handed operation off</string>
    <string name="menu_search">Search</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_new_contact_action_bar">New</string>
    <string name="menu_new_group_action_bar">New</string>
    <string name="menu_print">Print</string>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="description_contact_photo">contact photo</string>
    <string name="share_visible_contacts">Share visible contacts</string>
    <string name="call_settings">Call settings</string>
    <string name="menu_contacts_filter">Contacts to display</string>
    <string name="menu_import_export">Import/export</string>
    <string name="menu_share">Share</string>
    <string name="display_options_sort_list_by">Sort list by</string>
    <string name="display_options_view_names_as">View contact names as</string>
    <string name="menu_settings">Settings</string>
    <string name="preference_displayOptions">Display options</string>
    <string name="choose_resources_header">Choose Resources</string>
    <string name="call_speed_dial">Speed dial</string>
    <string name="menu_association">Associate SIM card</string>
    <string name="block_video_incoming_call">Block video incoming calls directly</string>
    <string name="menu_move_group">Move group members</string>
    <string name="menu_message_group">Send group message</string>
    <string name="menu_email_group">Send group E-mail</string>
</resources>