<?xml version="1.0" encoding="utf-8"?>
<aurora.preference.AuroraPreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:aurora="http://schemas.android.com/apk/res/com.aurora">
    <aurora.preference.AuroraPreferenceCategory aurora:aurorakey="pref_key_import_settings" aurora:auroratitle="@string/aurora_import_title">
        <aurora.preference.AuroraPreference aurora:aurorakey="pref_key_import_sim" aurora:auroratitle="@string/aurora_import_sim_title" aurora:aurorapersistent="false" />
        <aurora.preference.AuroraPreference aurora:aurorakey="pref_key_import_sd" aurora:auroratitle="@string/aurora_import_sd_title" aurora:aurorasummary="@string/aurora_import_sd_subtitle" aurora:auroradefaultValue="false" />
        <aurora.preference.AuroraPreference aurora:aurorakey="pref_key_import_sd2" aurora:auroratitle="@string/aurora_import_sd2_title" aurora:aurorasummary="@string/aurora_import_sd2_subtitle" aurora:auroradefaultValue="false" />
    </aurora.preference.AuroraPreferenceCategory>
    <aurora.preference.AuroraPreferenceCategory aurora:aurorakey="pref_key_export_settings" aurora:auroratitle="@string/aurora_export_title">
        <aurora.preference.AuroraPreference aurora:aurorakey="pref_key_export_sim" aurora:auroratitle="@string/aurora_export_sim_title" aurora:aurorapersistent="false" />
        <aurora.preference.AuroraPreference aurora:aurorakey="pref_key_export_sd" aurora:auroratitle="@string/aurora_export_sd_title" aurora:aurorasummary="@string/aurora_export_sd_subtitle" aurora:auroradefaultValue="false" />
        <aurora.preference.AuroraPreference aurora:aurorakey="pref_key_export_sd2" aurora:auroratitle="@string/aurora_export_sd2_title" aurora:aurorasummary="@string/aurora_export_sd2_subtitle" aurora:auroradefaultValue="false" />
    </aurora.preference.AuroraPreferenceCategory>
</aurora.preference.AuroraPreferenceScreen>