<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_dial_action_search" android:id="@id/search_on_action_bar" android:title="@string/menu_search" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/gn_ic_menu_show_other_calllog" android:id="@id/gn_show_other_calllog" android:visible="false" android:title="@string/recentCallsIconLabel" android:showAsAction="ifRoom">
        <menu>
            <item android:id="@id/gn_calllog_type_filter_all" android:title="@string/gn_allcall_tab_label" />
            <item android:id="@id/gn_calllog_type_filter_miss" android:title="@string/gn_misscall_tab_label" />
            <item android:id="@id/gn_calllog_type_filter_outgoing" android:title="@string/gn_outgoingcall_tab_label" />
            <item android:id="@id/gn_calllog_type_filter_incoming" android:title="@string/gn_incomingcall_tab_label" />
        </menu>
    </item>
    <item android:id="@id/gn_calllog_delete_all" android:title="@string/delete_call_log" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_call_settings" android:orderInCategory="2" android:title="@string/call_settings" android:showAsAction="withText" />
    <item android:id="@id/filter_option" android:title="@string/menu_contacts_filter" android:showAsAction="withText" />
    <item android:id="@id/add_contact" android:title="@string/menu_newContact" android:showAsAction="withText" />
    <item android:id="@id/menu_clear_frequent" android:title="@string/gn_menu_clear_frequent_contacted" android:showAsAction="withText" />
</menu>