<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_contacts_filter" android:title="@string/gn_menu_contacts_filter" android:showAsAction="never" />
    <item android:icon="?search_menu_item_bg" android:id="@id/menu_search" android:title="@string/menu_search" android:showAsAction="always" />
    <item android:icon="?add_menu_item_bg" android:id="@id/menu_add_contact" android:title="@string/menu_new_contact_action_bar" android:showAsAction="always" />
    <item android:icon="?add_menu_item_bg" android:id="@id/menu_add_group" android:title="@string/menu_new_group_action_bar" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_import_export_holo_light" android:id="@id/menu_import_export" android:title="@string/menu_import_export" android:showAsAction="never" />
    <item android:id="@id/gn_menu_show_intercept_call" android:title="@string/gn_show_intercept_call" android:showAsAction="never" />
    <item android:id="@id/gn_menu_merge_contacts" android:title="@string/gn_menu_merge_contacts" android:showAsAction="never" />
    <item android:id="@id/gn_menu_exchange_contacts" android:title="@string/gn_exchange_contacts" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_share_holo_light" android:id="@id/menu_share_visible_contacts" android:title="@string/gn_menu_share_contacts" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/menu_delete_contact" android:title="@string/gn_menu_batch_options" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_settings" android:title="@string/menu_settings" android:showAsAction="never" />
</menu>