<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="?edit_menu_item_bg" android:id="@id/menu_edit" android:title="@string/menu_editContact" android:alphabeticShortcut="e" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_share_holo_light" android:id="@id/menu_share" android:title="@string/menu_share" android:alphabeticShortcut="s" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/menu_delete" android:title="@string/menu_deleteContact" />
    <item android:icon="@drawable/ic_menu_mark" android:id="@id/menu_set_ringtone" android:title="@string/menu_set_ring_tone" />
    <item android:icon="@drawable/ic_menu_mark" android:id="@id/menu_association_sim" android:title="@string/menu_association" />
    <item android:id="@id/menu_block_voice_incoming_call" android:checkable="true" />
    <item android:id="@id/menu_block_video_incoming_call" android:title="@string/block_video_incoming_call" android:checkable="true" />
    <item android:id="@id/gn_menu_add_blacklist" android:title="@string/gn_add_blacklist" />
</menu>