<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/gn_menu_fliter_calllog" android:orderInCategory="1" android:title="@string/gn_menu_fliter_calllog" android:showAsAction="withText" />
    <item android:id="@id/gn_menu_show_intercept_call" android:orderInCategory="1" android:title="@string/gn_show_intercept_call" android:showAsAction="withText" />
    <item android:id="@id/menu_gemini_sim_management" android:orderInCategory="1" android:title="@string/gn_menu_gemini_sim_management" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_call_settings_dialpad" android:orderInCategory="1" android:title="@string/call_settings" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_one_hand_operation_on" android:visible="false" android:orderInCategory="1" android:title="@string/gn_one_hand_operation_on" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_one_hand_operation_off" android:visible="false" android:orderInCategory="1" android:title="@string/gn_one_hand_operation_off" android:showAsAction="withText" />
    <item android:id="@id/menu_speed_dial" android:orderInCategory="1" android:title="@string/call_speed_dial" android:showAsAction="withText" />
    <item android:id="@id/gn_menu_clear_calllog" android:orderInCategory="1" android:title="@string/gn_menu_batch_delete" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_settings" android:orderInCategory="1" android:title="@string/menu_settings" android:showAsAction="withText" />
</menu>