<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="?add_menu_item_bg" android:id="@id/menu_add_member" android:title="@string/menu_new_contact_action_bar" android:alphabeticShortcut="a" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/menu_message_group" android:title="@string/menu_message_group" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/gn_menu_ringtone_set_batch" android:title="@string/gn_menu_ringtone_set_batch" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/menu_email_group" android:title="@string/menu_email_group" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/menu_move_group" android:title="@string/menu_move_group" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_compose_holo_dark" android:id="@id/menu_edit_group" android:title="@string/menu_editGroup" android:alphabeticShortcut="e" android:showAsAction="never" />
    <item android:icon="@drawable/ic_menu_trash_holo_light" android:id="@id/menu_delete_group" android:title="@string/menu_deleteGroup" android:showAsAction="never" />
</menu>