<?xml version="1.0" encoding="utf-8"?>
<aurora.preference.AuroraPreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:aurora="http://schemas.android.com/apk/res/com.aurora">
    <aurora.preference.AuroraPreferenceCategory aurora:aurorakey="displayOptions" aurora:auroratitle="@string/preference_displayOptions">
        <com.android.contacts.preference.SortOrderPreference aurora:aurorakey="sortOrder" aurora:auroratitle="@string/display_options_sort_list_by" aurora:auroradialogTitle="@string/display_options_sort_list_by" />
        <com.android.contacts.preference.DisplayOrderPreference aurora:aurorakey="displayOrder" aurora:auroratitle="@string/display_options_view_names_as" aurora:auroradialogTitle="@string/display_options_view_names_as" />
        <com.android.contacts.preference.GnPhotoStylePreference aurora:aurorakey="photoStyle" aurora:auroratitle="@string/gn_photo_style_options" aurora:auroradialogTitle="@string/gn_photo_style_options" />
    </aurora.preference.AuroraPreferenceCategory>
</aurora.preference.AuroraPreferenceScreen>