<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:id="@id/saleSetting" android:layout_width="wrap_content" android:layout_height="wrap_content" android:stretchColumns="1">
        <TableRow>
            <TextView android:textSize="18.0dip" android:gravity="right" android:text="@string/gn_sales_num" />
            <aurora.widget.AuroraEditText android:id="@id/number" android:maxLength="11" android:inputType="number" />
        </TableRow>
        <TableRow>
            <TextView android:textSize="18.0dip" android:gravity="right" android:text="@string/gn_sales_time" />
            <aurora.widget.AuroraEditText android:id="@id/time" android:maxLength="4" android:inputType="number" />
        </TableRow>
    </TableLayout>
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <CheckBox android:id="@id/sales_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gn_sales_switch" />
        <aurora.widget.AuroraButton android:id="@id/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gn_sales_save" android:layout_centerHorizontal="true" />
        <aurora.widget.AuroraButton android:id="@id/exit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gn_sales_exit" android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>