<?xml version="1.0" encoding="utf-8"?>
<view android:id="@id/gn_contact_photo_view" android:layout_width="@dimen/aurora_editor_contact_photo_size" android:layout_height="@dimen/aurora_editor_contact_photo_size" class="com.android.contacts.editor.PhotoEditorView"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:gravity="left" android:id="@id/photo" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/ic_contact_picture_holo_light" android:scaleType="centerCrop" android:cropToPadding="true" />
    <View android:id="@id/frame" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/description_contact_photo" />
    <LinearLayout android:orientation="vertical" android:id="@id/gn_contact_add_pic" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_marginTop="12.0dip" android:text="@string/gn_contact_photo_default_add" style="@style/GnContactsEditPhoto" />
        <TextView android:text="@string/gn_contact_photo_default_photo" style="@style/GnContactsEditPhoto" />
    </LinearLayout>
    <TextView android:textColor="@color/gn_dial_qwert_text_color_dark" android:gravity="center" android:id="@id/gn_contact_photo_edit" android:background="@drawable/gn_ic_contact_photo_edit_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="45.0dip" android:text="@string/gn_contact_photo_edit_str" android:alpha="100.0" />
</view>