<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:background="?kind_editors_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="@dimen/gn_dialpad_empty_view_padding_top" android:layout_marginRight="8.0dip" android:minHeight="@dimen/gn_list_item_min_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <aurora.widget.AuroraButton android:id="@id/gn_strange_num_add_new_contact" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/gn_dialpad_new_contact_item" android:drawableTop="?gn_ic_add_contact" android:layout_weight="1.0" style="@style/GnDrawableTextButton" />
    <View android:layout_gravity="center_vertical" android:background="?android:dividerVertical" android:layout_width="@dimen/gn_vertical_divider_width" android:layout_height="fill_parent" />
    <aurora.widget.AuroraButton android:id="@id/gn_strange_num_add_to_contact" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/gn_dialpad_add_exist_contact_item" android:drawableTop="?gn_ic_add_existing_contact" android:layout_weight="1.0" style="@style/GnDrawableTextButton" />
    <View android:layout_gravity="center_vertical" android:background="?android:dividerVertical" android:layout_width="@dimen/gn_vertical_divider_width" android:layout_height="fill_parent" />
    <aurora.widget.AuroraButton android:id="@id/gn_strange_num_send_sms" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/gn_dialpad_send_message_item" android:drawableTop="?gn_ic_send_message" android:layout_weight="1.0" style="@style/GnDrawableTextButton" />
</LinearLayout>